Bug 502258 - Timeline is broken
Summary: Timeline is broken
Status: RESOLVED FIXED
Alias: None
Product: Telly Skout
Classification: Applications
Component: General (other bugs)
Version First Reported In: 24.12.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-31 21:00 UTC by Ralf
Modified: 2025-04-01 16:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.04
Sentry Crash Report:


Attachments
Screenshot 1 of 2 (163.69 KB, image/png)
2025-03-31 21:00 UTC, Ralf
Details
Screenshot 2 of 2 (182.58 KB, image/png)
2025-03-31 21:01 UTC, Ralf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf 2025-03-31 21:00:36 UTC
Created attachment 179897 [details]
Screenshot 1 of 2

Hi,

my apologies, but I don't have the time for a detailed bug report. I just want to inform, that there is an issue with the TV Spielfilm fetcher again.

Take a look at the clock in the upper right corner of the screenshots and compare it with the timeline shown by telly-scout.

I can't say for sure, but I guess it still worked 2025-03-30, hence the issue might not necessarily be related to the qt updates.

$ telly-skout 
Database for fetcher 0
Create DB tables
Starting to fetch favorites
ProgramsModel is neither a default constructible QObject, nor a default- and copy-constructible Q_GADGET, nor marked as uncreatable.
You should not use it as a QML type.
qrc:/qt/qml/org/kde/kirigami/dialogs/PromptDialog.qml:135: TypeError: Cannot read property 'Success' of undefined
qrc:/qt/qml/org/kde/kirigami/dialogs/PromptDialog.qml:97: TypeError: Cannot read property 'None' of undefined

$ telly-skout 
Database for fetcher 0
Create DB tables
Starting to fetch favorites
ProgramsModel is neither a default constructible QObject, nor a default- and copy-constructible Q_GADGET, nor marked as uncreatable.
You should not use it as a QML type.
qrc:/qt/qml/org/kde/kirigami/dialogs/PromptDialog.qml:135: TypeError: Cannot read property 'Success' of undefined
qrc:/qt/qml/org/kde/kirigami/dialogs/PromptDialog.qml:97: TypeError: Cannot read property 'None' of undefined
file:///usr/lib/qt6/qml/org/kde/kirigami/PageRow.qml:1098:5: QML RowLayout: StackView has detected conflicting anchors. Transitions may not execute properly.
file:///usr/lib/qt6/qml/org/kde/kirigami/PageRow.qml:1098:5: QML RowLayout: StackView has detected conflicting anchors. Transitions may not execute properly.
Starting to fetch favorites

$ grep telly-skout /var/log/pacman.log | tail -1
[2025-03-07T07:38:53+0100] [ALPM] upgraded telly-skout (24.12.2-1 -> 24.12.3-1)

$ grep qt /var/log/pacman.log
[snip]
[2025-03-28T10:21:04+0100] [ALPM] upgraded qt6-translations (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:04+0100] [ALPM] upgraded qt6-base (6.8.2-3 -> 6.8.3-1)
[2025-03-28T10:21:04+0100] [ALPM] upgraded qt6-serialport (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:04+0100] [ALPM] upgraded qt6-svg (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:04+0100] [ALPM] upgraded qt6-shadertools (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:04+0100] [ALPM] upgraded qt6-5compat (6.8.2-2 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-tools (6.8.2-2 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-declarative (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-wayland (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded layer-shell-qt (6.3.3-1 -> 6.3.3-3)
[2025-03-28T10:21:05+0100] [ALPM] upgraded libfm-qt (2.1.0-3 -> 2.1.0-4)
[2025-03-28T10:21:05+0100] [ALPM] upgraded libqtxdg (4.1.0-3 -> 4.1.0-4)
[2025-03-28T10:21:05+0100] [ALPM] upgraded python-pyqt6 (6.8.1-1 -> 6.8.1-2)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-charts (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-imageformats (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-multimedia-ffmpeg (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-multimedia (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-networkauth (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-positioning (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-scxml (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-speech (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-webchannel (6.8.2-1 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-webengine (6.8.2-3 -> 6.8.3-1)
[2025-03-28T10:21:05+0100] [ALPM] upgraded qt6-websockets (6.8.2-1 -> 6.8.3-1)

Regards,
Ralf
Comment 1 Ralf 2025-03-31 21:01:17 UTC
Created attachment 179898 [details]
Screenshot 2 of 2
Comment 2 Bug Janitor Service 2025-04-01 16:46:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/telly-skout/-/merge_requests/215
Comment 3 Plata 2025-04-01 16:50:13 UTC
Git commit fa169acabaf67af74b7fdf41661dd64e06032989 by Plata Hill.
Committed on 01/04/2025 at 16:50.
Pushed by plata into branch 'master'.

Improve handling of gaps/overlaps in the programs

It can happen that the program data contains errors such that there are gaps between programs or programs overlap. If this happens, the "Favorites" page breaks.

This was handled by adjusting the start time of a program to the stop time of the previous program. However, if the stop time of the previous program is completely off (e.g. correct time but on the next day), the problem still persists.

Enhance the logic to (hopefully) be more robust against these kinds of errors. Follow the logic that it's better to start too early than missing something.

FIXED-IN: 25.04

M  +5    -0    src/program.cpp
M  +1    -0    src/program.h
M  +10   -1    src/programsmodel.cpp

https://invent.kde.org/utilities/telly-skout/-/commit/fa169acabaf67af74b7fdf41661dd64e06032989
Comment 4 Plata 2025-04-01 16:51:20 UTC
Git commit 5d402934000528dd41ffe15b339e470ba64801f4 by Plata Hill.
Committed on 01/04/2025 at 16:51.
Pushed by plata into branch 'release/25.04'.

Improve handling of gaps/overlaps in the programs

It can happen that the program data contains errors such that there are gaps between programs or programs overlap. If this happens, the "Favorites" page breaks.

This was handled by adjusting the start time of a program to the stop time of the previous program. However, if the stop time of the previous program is completely off (e.g. correct time but on the next day), the problem still persists.

Enhance the logic to (hopefully) be more robust against these kinds of errors. Follow the logic that it's better to start too early than missing something.

FIXED-IN: 25.04

M  +5    -0    src/program.cpp
M  +1    -0    src/program.h
M  +10   -1    src/programsmodel.cpp

https://invent.kde.org/utilities/telly-skout/-/commit/5d402934000528dd41ffe15b339e470ba64801f4